# robotics-book-hackathon

./: .gitignore  CLAUDE.md  README.md  agent-workflow.md  bash.exe.stackdump  docker-compose.yml  render.yaml
.claude/: settings.local.json
.specify/memory/: agent-context.md  constitution.md
backend/: .dockerignore  .env.example  Dockerfile  MIGRATION.md  README.md  main.py  pyproject.toml  requirements.txt
backend/scripts/: index_content.py  init_qdrant_collection.py  validate_env.py
backend/src/agents/: __init__.py  chatbot.py  models.py
backend/src/api/: chatbot_router.py
backend/src/config/: __init__.py  env.py
backend/src/database/: __init__.py  qdrant_client.py
backend/src/middleware/: input_validator.py
backend/src/models/: __init__.py  embedding.py  query.py  response.py
backend/src/services/: qdrant_service.py  rag_service.py
backend/src/utils/: content_processor.py  metrics.py  text_splitter.py
backend/tests/integration/: test_integration.py
backend/tests/performance/: test_performance.py
book-source/: README.md  docusaurus.config.js  docusaurus.config.js.backup  package-lock.json  package.json  sidebars.js
book-source/docs/: action-planning.md  capstone-overview.md  conversational-robotics.md  deployment-scenarios.md  (+30 more)
docs/: content-creation-process.md  deployment-scenarios.md  isaac-ai-workflows.md  isaac-simulation-environments.md  nvidia-isaac-platform.md  quality-assurance-process.md  robot-brain-integration.md
frontend/: docusaurus-plugin-chatbot.js  package-lock.json  package.json
scripts/: validate-content-contract.md
(+200 files in other folders)
