[project]
name = "robotics-book-hackathon"
version = "0.1.0"
description = "Backend API for robotics book hackathon"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "qdrant-client>=1.7.0",
    "openai>=1.50.0",
    "openai-agents>=0.2.9",
    "sentence-transformers==2.2.2",
    "python-dotenv==1.0.0",
    "pydantic==2.10.6",
    "python-multipart==0.0.6",
    "google-generativeai>=0.3.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
